3_canary_release/deployment/virtualservice-v10-45-v11-45-v12-10.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: leaf1-vs
spec:
  hosts:
    - "*"
  gateways:
    - leaf1-gateway
  http:
    - route:
        - destination:
            host: leaf1
            subset: v10
            port:
              number: 8080
          weight: 45
        - destination:
            host: leaf1
            subset: v11
            port:
              number: 8080
          weight: 45
        - destination:
            host: leaf1
            subset: v12
            port:
              number: 8080
          weight: 10
